--- a/01.PART/조건문문제/문제목록.md
+++ b/01.PART/조건문문제/문제목록.md
@@ -13,7 +13,9 @@
 - 2884  
 
 **핵심 아이디어**
-- 
+- 현재 시각이 주어졌을 때, 45분을 감소시킨다.
+- 0분보다 작아지면, 시(hour)가 1시간 감소한다.
+- 0시보다 작아지면, 시(hour)가 23시로 초기화된다.
 ---
 [오븐시계](https://www.acmicpc.net/problem/2525)  
 
@@ -37,7 +39,7 @@
 - 2480  
 
 **핵심 아이디어**
-- 눈금 세 개가 모두 같으면 -> 10000 + (같은누금) * 1000
+- 눈금 세 개가 모두 같으면 -> 10000 + (같은눈금) * 1000
 - 눈금 두 개가 같으면 -> 1000 + (같은눈금) * 100
 - 눈금이 모두 다르면 -> (가장큰눈금) * 100
 ---
