--- a/01.PART/조건문문제/문제목록.md
+++ b/01.PART/조건문문제/문제목록.md
@@ -5,41 +5,50 @@
 - 9498  
 
 **핵심 아이디어**
-- JavaScript를 이용해 **조건 문법**을 사용할 수 있다.
----
-[알람시계](https://www.acmicpc.net/problem/2884)  
-
-**문제 번호**
-- 2884  
-
-**핵심 아이디어**
-- 현재 시각이 주어졌을 때, 45분을 감소시킨다.
-- 0분보다 작아지면, 시(hour)가 1시간 감소한다.
-- 0시보다 작아지면, 시(hour)가 23시로 초기화된다.
----
-[오븐시계](https://www.acmicpc.net/problem/2525)  
-
-**문제 번호**
-- 2525  
-
-**핵심 아이디어**
-- 입력으로 주어진 시각을 "분"의 형태로 바꾸기
-- "분"이 주어졌을 때, 시각을 알려주는 기능을 작성하기
+- 001) 1부터 10000까지 값을 차례대로 더하기... 시간 복잡도 O(N)
+- 002) 등차수열의 합 공식을 이용
 ```
-[예시]
-입력 : 17시40분 + 80분 == 1060분 + 80분 == 1140분
-1. 1140를 1440으로 나눈 나머지 취하기 : 1140분
-2. 60으로 나눈 몫을 시로 취하기 : 19시
-3. 60으로 나눈 나머지를 분으로 취하기 : 0분
+[등차수열의 합]
+Sn : 등차수열의 제 1항부터 제 N항까지의 합
+a : 첫째 항
+l : 마지막 항
+Sn = N(a + l)/2
 ```
+
+**TIP**
+- 문자열을 수로 변환할 때 `parseInt`에 비하여 `Number`의 속도가 더 빠르게 동작
 ---
-[주사위세개](https://www.acmicpc.net/problem/2480)  
+[구구단](https://www.acmicpc.net/problem/2739)  
 
 **문제 번호**
-- 2480  
+- 2739  
 
 **핵심 아이디어**
-- 눈금 세 개가 모두 같으면 -> 10000 + (같은눈금) * 1000
-- 눈금 두 개가 같으면 -> 1000 + (같은눈금) * 100
-- 눈금이 모두 다르면 -> (가장큰눈금) * 100
+- 1단부터 𝑁단까지 **반복 문법**을 이용  
+
+**TIP**
+**템플릿 리터럴**을 사용해 문자열 내부에 변수를 포함(**백틱 문자** 사용)  
+```javaScript
+console.log(`${n} * ${i} = ${n * i}`);
+```
+
+---
+[별찍기1](https://www.acmicpc.net/problem/2438)  
+
+**문제 번호**
+- 2438  
+
+**핵심 아이디어**
+- **2중 반복 문법**을 이용하여 문제를 해결  
+---
+[빠른 A+B](https://www.acmicpc.net/problem/15552)  
+
+**문제 번호**
+- 15552  
+
+**핵심 아이디어**
+- JavaScript를 이용해 문자열을 출력할 수 있어야 한다.
+- 빠르게 출력하기 위해 하나의 문자열 변수에 정보를 담은 뒤에 한꺼번에 문자열을 출력한다.
+- 한 줄을 출력할 때마다 console.log()를 수행하면 많은 시간이 소요
+- 모든 "줄(line)"에 대한 정보를 하나의 문자열에 담았다가 한꺼번에 출력한다.
 ---
